# uv-project-agno-pdf

./: .env  Dockerfile  README.md  commands.txt  pyproject.toml
agents/core/: agent_def.py  agent_prompts.py  selector.py
agents/tools/: tool_image_llm_parser.py  tool_pdf_2_image_pymupdf.py  tool_phi_redactor.py
apps/: main.py  settings.py
apps/routes/: agents.py  health.py  model.py  v1_router.py
db/: alembic.ini
db/alembic/: env.py
db/alembic/versions/: 815117190b75_add_status_column.py  bcbcea3a19ed_create_pdf_manager_table.py
db/tables/: model.py
tests/scenario/: scene1.py  scene2.py
tests/test-data/: get_base64.py
tests/unit/: test_tool_image_llm_parser.py  test_tool_phi_redactor.py
workflow/: steps.py
